--- a/src/remember-source/RememberSongs.css
+++ b/src/remember-source/RememberSongs.css
@@ -172,7 +172,7 @@
 /* Song information lines */
     section.songs-group > div > p {
         line-height: 1.5;
-        font-size: 180%;
+        font-size: 169.8%;
 /* Override browser & user settings: */
         margin: 0;
     }
